--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,9 +72,9 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //profile picker picture
 
-   // implementation 'com.github.Drjacky:ImagePicker:2.1.12'
+    implementation 'com.github.Drjacky:ImagePicker:2.1.13'
     //swipe decorator for recycler view
-   // implementation 'com.github.xabaras:RecyclerViewSwipeDecorator:1.3'
+    implementation 'com.github.xabaras:RecyclerViewSwipeDecorator:1.4'
 
     //Room
 
