--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+
     repositories {
         google()
         mavenCentral()
-        maven { url "https://jitpack.io"}
+        maven { url "https://jitpack.io" }
+
     }
     dependencies {
 
-        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1")
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1"
     }
 }
 plugins {
