--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,8 @@ dependencies {
 
     implementation 'androidx.room:room-ktx:2.4.2'
     implementation "androidx.room:room-runtime:2.4.2"
+    //material
+    implementation "com.google.android.material:material:1.6.0-alpha03"
 
 
 }
