--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,8 +66,8 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.2.1"
 
     //extended coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.5'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.0'
 
     //Glide
 
@@ -102,4 +102,10 @@ dependencies {
 
 
 
+
+    // Material Design Library
+    implementation 'com.google.android.material:material:1.5.0'
+
+    // Lottie Animation Library
+    implementation 'com.airbnb.android:lottie:4.2.2'
 }
